--- a/package.json
+++ b/package.json
@@ -24,10 +24,16 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^8.0.0",
     "@typegoose/typegoose": "^12.15.1",
+    "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "mongoose": "^8.14.2",
     "nestjs-typegoose": "^7.1.38",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -37,10 +43,12 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
