--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^5.0.3",
     "@typegoose/typegoose": "^12.15.1",
+    "app-root-path": "^3.1.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "fs-extra": "^11.3.0",
     "mongoose": "^8.14.2",
     "nestjs-typegoose": "^7.1.38",
     "passport": "^0.7.0",
@@ -43,10 +46,13 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/app-root-path": "^3.1.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "27.5.0",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.12",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.11",
